Added "Les années lasers" article translation

--- a/htdocs/reviews/index.htm
+++ b/htdocs/reviews/index.htm
@@ -48,7 +48,22 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <table width="100%" border="0">
         <tr>
           <td width="23%"><img src="lal74big.jpg" width="145" height="200"></td>
-          <td width="77%">See a scan of the <a href="LALSeptembreCloseUpArticle.jpg">article</a>.</td>
+          <td width="77%"> 
+            <p><i>&quot;Buying an lcd or dmd matrix-based projector often comes 
+              with some strange behavior. All of a sudden, the owner gets the 
+              desire of &quot;scaling&quot; everything. That's just fine as this 
+              is exactly what offers the application Dscaler, previously known 
+              as dTV. Dscaler can be installed on a mid-range computer equipped 
+              with a capture card. From there, it becomes possible to deinterlace 
+              whatever [interlaced] source using composite or svideo connection, 
+              and scale it to the projector resolution.<br>
+              Dscaler also allows to change the ratio, to adjust video parameters, 
+              to choose between different deinterlacing algorithms. <b>For short, 
+              Dscaler is simply mandatory for anyone playing with a home theater 
+              computer</b>. I almost forgot, Dscaler is open source and so, totally 
+              free&quot;</i></p>
+            <p>See a scan of the <a href="LALSeptembreCloseUpArticle.jpg">article</a>.</p>
+          </td>
         </tr>
       </table>
       <h2><a href="http://vnm.prodcine.com/">Video num&eacute;rique magazine</a></h2>
@@ -111,7 +126,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             of the home theater computer, and of Dscaler</b>&quot;</i></td>
         </tr>
       </table>
-      <p>Home theater magazine</p>
+      <h2>Home theater magazine</h2>
       <p>Issue ??, article &quot;A scaler for less than 500 francs ?&quot;, (c) 
       </p>
       <H2><img src="DScalerHomeTheaterArticle.jpg" width="500" height="335"></H2>
