Added the "htpc manufacturers" part as well as the original "reviews" page

--- a/htdocs/reviews/index.htm
+++ b/htdocs/reviews/index.htm
@@ -40,13 +40,41 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <h2>Press</h2>
+      <h1>Individual reviews</h1>
+      <p>&nbsp;
+      <p><b>Mark Rejhon</b> <a href="http://www.avsforum.com/ubb/Forum12/HTML/003827.html">reviews</a> 
+        v1.2 and comments on the newly supported video-source deinterlacing...<br>
+      <blockquote>&quot;Fast motion sports such as Football, Hockey and downhill 
+        skiing TV shows look MUCH better now with the new dTV 1.2 video-source 
+        deinterlacer. Anything with fast panning motion is very noticeably improved. 
+        No more venetian-blinds effects!&quot;</blockquote>
+      <p><b>CH Yeow</b> <a href="http://www.avsforum.com/ubb/Forum12/HTML/003825.html">comments</a> 
+        on v1.2...<br>
+      <blockquote>&quot;I have to say your software is excellent. I have so much 
+        trouble playing a region 4 PAL disc "Screamers" on regular Powerdvd or 
+        Windvd. It skips frames especially in Chapter 17. But it seems that your 
+        software plays PAL discs and Pal VCD so flawlessly.&quot; </blockquote>
+      <p><b>Larry Davis</b> <a href="http://www.avsforum.com/ubb/Forum10/HTML/002411.html">says</a> 
+        regarding using v1.2 with laserdisc material...<br>
+      <blockquote>&quot;I installed the Win-TV yesterday along with the dTV software. 
+        I connected my laserdisc player to the Win-TV, launched dTV and I was 
+        stunned by how good the picture looked. It doesn't look as good as PC 
+        DVD, but it is a quantum leap beyond s-video input on the Asus geforce.&quot;</blockquote>
+      <p><b>Li On</b> <a href="http://www.avsforum.com/ubb/Forum12/HTML/003790.html">compliments</a> 
+        the initial release...<br>
+      <blockquote>&quot;I used S-video from a Pioneer LD player. Picture is too 
+        dark but adjusted the dTV video setting gave a great vivid picture. I 
+        tried StarWar TPM LD... and it gave a perfect picture with zero artifact! 
+        AMAZING! The picture stay in such perfect 'film mode'... I ended up watch 
+        the whole movie! Even the super fast motion in 'Pod Race' scene is perfect. 
+        I must said the <b>picture quality is as great as my Faroudja processor!</b>&quot;</blockquote>
+      <h1>Press</h1>
       <p>&nbsp;</p>
       <h2><a href="http://www.annees-laser.com/">Les ann&eacute;es laser</a></h2>
       <p>France, issue 74, (c) Les ann&eacute;es laser</p>
       <p>&nbsp;</p>
       <table width="100%" border="0">
-        <tr>
+        <tr> 
           <td width="23%"><img src="lal74big.jpg" width="145" height="200"></td>
           <td width="77%"> 
             <p><i>&quot;Buying an lcd or dmd matrix-based projector often comes 
@@ -130,6 +158,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p>Issue ??, article &quot;A scaler for less than 500 francs ?&quot;, (c) 
       </p>
       <H2><img src="DScalerHomeTheaterArticle.jpg" width="500" height="335"></H2>
+      <H2>&nbsp;</H2>
+      <h1>Home theater computers makers</h1>
+      <p>They're building home theater computers, and some of them have chosen 
+        to bundle Dscaler in their configuration.</p>
+      <ul>
+        <li><a href="http://www.hivizone.com">HiviZone</a>, from Hong-Kong. They're 
+          using Zoltrix cards</li>
+        <li><a href="http://www.digitalconnection.com">DigitalConnection</a></li>
+        <li><a href="http://www.spatz-tech.de">Spatz Tech</a>, from Germany</li>
+      </ul>
       <H2>&nbsp;</H2>
       <!-- #EndEditable --></td>
   </tr>
