Shortcut keys for calibratuin now described in help pages

--- a/DScaler/Help/Calibration.htm
+++ b/DScaler/Help/Calibration.htm
@@ -125,10 +125,11 @@ height="2"></td>
         pattern are drawn with a (black or white) rectangle. You must verify that 
         these zones are correctly centered with the content of your test pattern. 
         All consumer players crop a little the video signal at left and at right. 
-        Two DScaler <a href="#parameters">parameters</a> allow to define the left 
-        and the right cropping done by your player. With a correct value for these 
-        parameters, the drawn rectangles should be correctly placed in the video 
-        signal.</p>
+        Use the <a href="keyboard.htm">shortcut keys</a> to define the correct 
+        left and the right cropping done by your player. You can adjust the overscan 
+        used during the calibration too, but this overscan should be normally 
+        set to 0. With a correct value for these three parameters, the drawn rectangles 
+        should be correctly placed in the video signal.</p>
       <p>An OSD is automatically displayed to help the user to decide what to 
         adjust. The user can show and hide this OSD using Enter and Backspace 
         keys.<br>
