--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,7 +54,7 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 3.0.7</h1>
+<h1>DScaler - version 3.0.9</h1>
 
 <p>What's new:<br>
     Massive improvements to 2:2 pulldown detection.<br>
@@ -75,13 +75,12 @@ default)<br>
 mode<br>
     Improved Sound support<br>
     Additional card support<br>
-    Teletext fixes (it's working pretty well on UK channels
-now)<br>
+    Teletext improvements<br>
     NTSC50 mode for Chris Williams<br>
     Always on top full screen flag<br>
     Gamma filter fixed<br>
     Various Bug Fixes<br>
-    French, Czech & Greek code pages for teletext<br>
+    Additional code pages for teletext<br>
     More flexible zoom and positioning<br>
     Alpha Logo Killer plug-in<br>
     Alpha Sharpness Filter<br>
