Help page updated

--- a/DScaler/Help/Calibration.htm
+++ b/DScaler/Help/Calibration.htm
@@ -70,7 +70,7 @@ height="2"></td>
           white,</li>
         <li>test patterns that contains only generic colors (red, green, blue, 
           yellow, cyan, magenta, ...),</li>
-        <li>test patterns whose contains is a merge of the two precedent types.</li>
+        <li>test patterns that contains a merge of the two precedent types.</li>
       </ol>
       <p>the first type of test pattern is used to adjust only brightness and 
         contrast.<br>
@@ -119,16 +119,16 @@ height="2"></td>
       </ol>
       <p><font face="Arial" size="3"><b>Manual calibration<a name="#manual_calibration"></a></b></font></p>
       <p>During a manual calibration, the user must adjust the different video 
-        settings using either the "Video adjustements" dialog box, either the 
-        <a href="keyboard.htm">shortcut keys</a>.</p>
+        settings using the "Video adjustements" dialog box or the <a href="keyboard.htm">shortcut 
+        keys</a>.</p>
       <p>Just after starting a manual calibration, all analyzed zones of the test 
         pattern are drawn with a (black or white) rectangle. You must verify that 
-        these zones are correctly centered with the content of your test pattern. 
+        those zones are correctly centered with the content of your test pattern. 
         All consumer players crop a little the video signal at left and at right. 
         Use the <a href="keyboard.htm">shortcut keys</a> to define the correct 
         left and the right cropping done by your player. You can adjust the overscan 
         used during the calibration too, but this overscan should be normally 
-        set to 0. With a correct value for these three parameters, the drawn rectangles 
+        set to 0. With a correct value for those three parameters, the drawn rectangles 
         should be correctly placed in the video signal.</p>
       <p>An OSD is automatically displayed to help the user to decide what to 
         adjust. The user can show and hide this OSD using Enter and Backspace 
@@ -155,10 +155,10 @@ height="2"></td>
         At the end, the user can see the new video settings, and a quality indicator 
         for each analyzed zone of the test pattern shows how good (from one to 
         five stars) is the card calibration for this zone. He is asked to confirm 
-        if he wants to keep these settings. If he responds &quot;No&quot;, the 
+        if he wants to keep those settings. If he responds &quot;No&quot;, the 
         video settings before calibration are restored. </p>
       <p><font face="Arial" size="3"><b>Parameters<a name="parameters"></a></b></font></p>
-      <p>All these parameters are defined in the section &quot;Calibration&quot; 
+      <p>All those parameters are defined in the section &quot;Calibration&quot; 
         of the ini file.</p>
       <table border="1">
         <tr> 
@@ -211,33 +211,83 @@ height="2"></td>
         ?<a name="referenced_patterns"></a></b></font></p>
       <p><font face="Arial" size="2"><b>DVD Collector Les Ann&eacute;es Laser 
         2000</b></font></p>
-      <p>A range of gray test pattern - title 36 chapter 1<br>
-        <img src="images/lal36-1.jpg" width="300" height="240"> </p>
-      <p>A color test pattern - title 31 chapter 1<br>
-        <img src="images/lal31-1.jpg" width="300" height="240"> </p>
+      <table width="100%" border="1">
+        <tr> 
+          <td> 
+            <div align="center">title 36 chapter 1<br>
+              <img src="images/lal36-1.jpg" width="300" height="240"><br>
+              Copyright (c) Les Ann&eacute;es Laser</div>
+          </td>
+          <td> 
+            <div align="center">title 31 chapter 1<br>
+              <img src="images/lal31-1.jpg" width="300" height="240"><br>
+              Copyright (c) Les Ann&eacute;es Laser </div>
+          </td>
+        </tr>
+      </table>
       <p><font face="Arial" size="2"><b>THX Optimode (Pal)</b></font></p>
-      <p>Monitor Performance test pattern<br>
-        <img src="images/thxMonitorPerfPal.jpg" width="300" height="240"> </p>
+      <table width="100%" border="1">
+        <tr> 
+          <td> 
+            <div align="center">Monitor Performance test pattern<br>
+              <img src="images/thxMonitorPerfPal.jpg" width="300" height="240"><br>
+              Copyright (c) Lucasfilm Ltd.</div>
+          </td>
+        </tr>
+      </table>
       <p>You can find this test pattern on several Pal THX DVD. For instance, 
         &quot;Les Rivi&egrave;res Pourpres&quot; in region 2.</p>
+      <p>For more informations about the THX test patterns, you can see <a href="http://www.thx.com/consumer_products/optimizer/index.html">here</a>.</p>
       <p><font face="Arial" size="2"><b>THX Optimode (Ntsc)</b></font></p>
-      <p>Monitor Performance test pattern<br>
-        <img src="images/thxMonitorPerfNtsc.jpg" width="300" height="200"> </p>
-      <p>Tint Color test pattern<br>
-        <img src="images/thxTintColorNtsc.jpg" width="300" height="200"> </p>
-      <p>You can find these test patterns on several Ntsc THX DVD. For instance, 
+      <table width="100%" border="1">
+        <tr> 
+          <td> 
+            <div align="center">Monitor Performance test pattern<br>
+              <img src="images/thxMonitorPerfNtsc.jpg" width="300" height="200"><br>
+              Copyright (c) Lucasfilm Ltd.</div>
+          </td>
+          <td> 
+            <div align="center">Tint Color test pattern<br>
+              <img src="images/thxTintColorNtsc.jpg" width="300" height="200"><br>
+              Copyright (c) Lucasfilm Ltd.</div>
+          </td>
+        </tr>
+      </table>
+      <p>You can find those test patterns on several Ntsc THX DVD. For instance, 
         &quot;Toy Story Ultimate Toy Box&quot; in region 1.</p>
+      <p>For more informations about the THX test patterns, you can see <a href="http://www.thx.com/consumer_products/optimizer/index.html">here</a>.</p>
       <p><font face="Arial" size="2"><b>DVD Video Essentials</b></font></p>
-      <p>A range of gray test pattern - title 18 chapter 2<br>
-        <img src="images/ve18-2.jpg" width="300" height="200"> </p>
-      <p>A color test pattern - tile 15 chapter 5<br>
-        <img src="images/ve15-5.jpg" width="300" height="200"> </p>
+      <table width="100%" border="1">
+        <tr> 
+          <td> 
+            <div align="center">title 18 chapter 2<br>
+              <img src="images/ve18-2.jpg" width="300" height="200"><br>
+              Copyright (c) Joe Kane Productions Inc.</div>
+          </td>
+          <td> 
+            <div align="center">tile 15 chapter 5<br>
+              <img src="images/ve15-5.jpg" width="300" height="200"><br>
+              Copyright (c) Joe Kane Productions Inc.</div>
+          </td>
+        </tr>
+      </table>
+      <p>For more informations about the AVIA disc, you can see <a href="http://www.videoessentials.com/dvd.htm">here</a>.</p>
       <p><font size="2"><b><font face="Arial">DVD AVIA</font></b></font></p>
-      <p>A range of gray test pattern - title 1 chapter 7<br>
-        <img src="images/aviaT1Ch7.jpg" width="300" height="200"> </p>
-      <p>A color test pattern - tile 4 chapter 4<br>
-        <img src="images/aviaT4Ch4.jpg" width="300" height="200"> </p>
-      <p>&nbsp;</p>
+      <table width="100%" border="1">
+        <tr> 
+          <td> 
+            <div align="center">title 1 chapter 7<br>
+              <img src="images/aviaT1Ch7.jpg" width="300" height="200"><br>
+              Copyright (c) Ovation Software</div>
+          </td>
+          <td> 
+            <div align="center">tile 4 chapter 4<br>
+              <img src="images/aviaT4Ch4.jpg" width="300" height="200"><br>
+              Copyright (c) Ovation Software</div>
+          </td>
+        </tr>
+      </table>
+      <p>For more informations about the AVIA disc, you can see <a href="http://www.ovationsw.com/">here</a>.</p>
       <!-- #EndEditable --> </td>
 </tr>
 
