Corrected teletext help

--- a/DScaler/Help/keyboard.htm
+++ b/DScaler/Help/keyboard.htm
@@ -902,7 +902,7 @@ height="2"></td>
             <p><small>Page Up</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>Cursor Up</small></p>
+            <p><small>Cursor Right</small></p>
           </td>
         </tr>
         <tr> 
@@ -910,7 +910,7 @@ height="2"></td>
             <p><small>Page Down</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>Cursor Down</small></p>
+            <p><small>Cursor Left</small></p>
           </td>
         </tr>
       </table>
