--- a/htdocs/reviews/index.htm
+++ b/htdocs/reviews/index.htm
@@ -41,27 +41,24 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <h1>Individual reviews</h1>
-      <p>&nbsp;
-      <p><b>Mark Rejhon</b> <a href="http://www.avsforum.com/ubb/Forum12/HTML/003827.html">reviews</a> 
-        v1.2 and comments on the newly supported video-source deinterlacing...<br>
+      <p>&nbsp; 
+      <p><b>Mark Rejhon</b> reviews v1.2 and comments on the newly supported video-source 
+        deinterlacing...<br>
       <blockquote>&quot;Fast motion sports such as Football, Hockey and downhill 
         skiing TV shows look MUCH better now with the new dTV 1.2 video-source 
         deinterlacer. Anything with fast panning motion is very noticeably improved. 
         No more venetian-blinds effects!&quot;</blockquote>
-      <p><b>CH Yeow</b> <a href="http://www.avsforum.com/ubb/Forum12/HTML/003825.html">comments</a> 
-        on v1.2...<br>
+      <p><b>CH Yeow</b> comments on v1.2...<br>
       <blockquote>&quot;I have to say your software is excellent. I have so much 
         trouble playing a region 4 PAL disc "Screamers" on regular Powerdvd or 
         Windvd. It skips frames especially in Chapter 17. But it seems that your 
         software plays PAL discs and Pal VCD so flawlessly.&quot; </blockquote>
-      <p><b>Larry Davis</b> <a href="http://www.avsforum.com/ubb/Forum10/HTML/002411.html">says</a> 
-        regarding using v1.2 with laserdisc material...<br>
+      <p><b>Larry Davis</b> says regarding using v1.2 with laserdisc material...<br>
       <blockquote>&quot;I installed the Win-TV yesterday along with the dTV software. 
         I connected my laserdisc player to the Win-TV, launched dTV and I was 
         stunned by how good the picture looked. It doesn't look as good as PC 
         DVD, but it is a quantum leap beyond s-video input on the Asus geforce.&quot;</blockquote>
-      <p><b>Li On</b> <a href="http://www.avsforum.com/ubb/Forum12/HTML/003790.html">compliments</a> 
-        the initial release...<br>
+      <p><b>Li On</b> compliments the initial release...<br>
       <blockquote>&quot;I used S-video from a Pioneer LD player. Picture is too 
         dark but adjusted the dTV video setting gave a great vivid picture. I 
         tried StarWar TPM LD... and it gave a perfect picture with zero artifact! 
@@ -155,9 +152,15 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
       </table>
       <h2>Home theater magazine</h2>
-      <p>Issue ??, article &quot;A scaler for less than 500 francs ?&quot;, (c) 
-      </p>
+      Summer 2001 issue, article &quot;A scaler for less than 500 francs ?&quot;, 
+      (c) 
       <H2><img src="DScalerHomeTheaterArticle.jpg" width="500" height="335"></H2>
+      <H2>&nbsp;</H2>
+      <H2><a href="http://www.guidetohometheater.com/">Stereophile Guide to Home 
+        Theater</a></H2>
+      <p>USA, november 2001 issue, article &quot;the 50$ scaler&quot; by Patrick 
+        Megenity, (c) Primedia Group Inc.</p>
+      <H2><img src="SGTHcover.jpg" width="92" height="117"></H2>
       <H2>&nbsp;</H2>
       <h1>Home theater computers makers</h1>
       <p>They're building home theater computers, and some of them have chosen 
@@ -167,6 +170,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           using Zoltrix cards</li>
         <li><a href="http://www.digitalconnection.com">DigitalConnection</a></li>
         <li><a href="http://www.spatz-tech.de">Spatz Tech</a>, from Germany</li>
+        <li><a href="http://www.cellarcinema.com">Cellar Cinema</a> are using 
+          Osprey cards</li>
       </ul>
       <H2>&nbsp;</H2>
       <!-- #EndEditable --></td>
