--- a/htdocs/reviews/misc.html
+++ b/htdocs/reviews/misc.html
@@ -95,7 +95,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       </p>
       <p>Full resolution scan of the <a href="DScalerHomeTheaterBigPage1-2.jpg">2 
         pages</a> of the article.</p>
-      <H2>&nbsp;</H2>
+      <p>&nbsp;</p>
+      <h2>Stereophile Guide to Home Theater, november 2001 issue</h2>
+      <p>See page <a href="Dscaler_1.jpg">1</a> and <a href="Dscaler_2.jpg">2</a></p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
