Adding SGHT cover and full article pages

--- a/htdocs/reviews/misc.html
+++ b/htdocs/reviews/misc.html
@@ -97,7 +97,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         pages</a> of the article.</p>
       <p>&nbsp;</p>
       <h2>Stereophile Guide to Home Theater, november 2001 issue</h2>
-      <p>See page <a href="Dscaler_1.jpg">1</a> and <a href="Dscaler_2.jpg">2</a></p>
+      <p>See page <a href="Dscaler1.jpg">1</a> and <a href="Dscaler2.jpg">2</a></p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
