Don't even remember what I changed

--- a/htdocs/reviews/misc.html
+++ b/htdocs/reviews/misc.html
@@ -118,7 +118,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         | <a href="../downloads.htm" class="bottommenu">download</a> 
         | <a href="../Authors.htm" class="bottommenu">authors</a> 
         | <a href="../Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="index.htm" class="bottommenu">setup</a> | <a href="../keyboard.htm" class="bottommenu">keyboard 
+        <a href="index.html" class="bottommenu">setup</a> | <a href="../keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
         list</a> | <a href="../FAQ.htm" class="bottommenu">faq</a> | <a href="../developers.htm" class="bottommenu">developers</a> 
         | <a href="../Links.htm" class="bottommenu">links</a></div>
