updated authors and thanks

--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -70,29 +70,30 @@ virtually any other any PC-based video software product.</p>
 <p>Mark authored the 3:2 pulldown algorithm that forms the basis
 of the algorithm implemented into DScaler by John Adcock. He maintained the project
 for three months and during that time made a huge contribution to the project.
+Although Mark is less active on the project now he still pops up regularly to offer 
+sage advice and to share his enormous knowledge and passion for the perfect image. 
 </p>
 </blockquote>
 
 <h2>Steve Grimm</h2>
 
 <blockquote>
-<p>Steve is contributing enhancements to the deinterlacing modes
+<p>Steve contributed major enhancements to the film detection code
 including better automatic switching between video mode and 3:2
 pulldown mode, and handling of material that has bad 3:2
-pulldown. In particular, Steve made significant modifications to
-the deinterlacing algorithm in version 2.0.0. He also worked on
-an early version of a 3:2 pulldown deinterlacing algorithm. In
-addition, he is the author of the aspect ratio autodetection code
+pulldown. Steve also made significant modifications to
+the deinterlacing algorithms in version 2.0.0 creating the two frame algorithm.
+He also worked on an early version of a 3:2 pulldown deinterlacing algorithm. In
+addition, he is the author of the aspect ratio auto detection code
 which was included in version 1.9.</p>
 </blockquote>
 
 <h2>Tom Barry</h2>
 
-<blockquote>Tom contributed the triple buffering code and
-synchronization fixes for version 2.0.0. Also, he has authored
-several MMX assembly optimizations to the video deinterlace mode
-and added the advanced Brooktree/Conexant chipset settings menu,
-both of which were included in version 1.9.</blockquote>
+<blockquote><p>As part of Tom's ongoing mission to use up all the world's CPU
+power he is behind many of the video deinterlacing plug-ins.  Tom has been part 
+of the project almost since the beginning and has contributed too much to summarize
+quickly.</p></blockquote>
 
 <h2>Michael Samblanet</h2>
 
@@ -118,12 +119,10 @@ purple-lines interference.</p>
 <h2>Laurent Garnier</h2>
 
 <blockquote>
-<p>Despite having really no link with the French DJ, he's the
-latest one on the DScaler boat. He coded the auto detection of
-WSS (WideScreen Signalling), improved the OSD with various
-"status screens". He also did the popup menu, per-format settings
-persistency. He's the second European coder, along with John
-Adcock.</p>
+<p>In his time off from being confused with the similarly named French DJ, 
+Laurent has been very busy adding some of the coolest new features in recent releases:
+auto-calibration, the OSD (On Screen Display), WSS (WideScreen Signalling) and per-format
+settings.</p>
 </blockquote>
 
 <h2>Torbj&ouml;rn Jansson</h2>
@@ -133,10 +132,35 @@ Adcock.</p>
 bug fixes</p>
 </blockquote>
 
+<h2>Eric Schmidt</h2>
+
+<blockquote>
+<p>Eric's major contribution has been the timeshifting code.</p>
+</blockquote>
+
 <h2>Lindsey Dubb</h2>
 
 <blockquote>
-<p>Provided the new Temporal Comb Filter</p>
+<p>The brains behind the new Temporal Comb Filter and the old game plug-in.</p>
+</blockquote>
+
+<h2>Jochen Trenner</h2>
+
+<blockquote>
+<p>Provided improvements to the MSP code for European stereo systems as his 
+alter ego "Hermes Conrad".</p>
+</blockquote>
+
+<h2>Mike Temperton</h2>
+
+<blockquote>
+<p>Is responsible for the many improvements to Teletext.</p>
+</blockquote>
+
+<h2>Muljadi Budiman</h2>
+
+<blockquote>
+<p>Added support for overlay colour controls.</p>
 </blockquote>
 
 <p>Please see the <a href="Thanks.htm">Thanks</a> file for an
