--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -55,75 +55,56 @@ height="2"></td>
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
-<p>See <a href="Authors.htm">Authors</a> for up to date list of
-developers who have contributed code to the project.</p>
 
-<p>See <a href="Thanks_MultiDec.txt">Thanks_MultiDec.txt</a> for
-a list of thanks for the project DScaler was based upon.</p>
+<p>I would like to express my gratitude to:</p>
+<ul>
+<li>All the <a href="Authors.htm">authors</a> who have contributed 
+code to the project.</li>
 
-<ol>
-<li>A big debt a gratitude is due to Mark Rejhon for his 3:2
-algorithm and his help testing, promoting DScaler but
-particularly for his vision and his refusal to accept second
-best.</li>
+<li>Expresso for creating multidec the foundation of DScaler. 
+<a href="Thanks_MultiDec.txt">MultiDec's thanks.</a></li>
 
-<li>Thanks to Michael Samblanet, who contributed the aspect ratio
-control code.</li>
-
-<li>Thanks to Daniel Schmelzer for his hard work creating and
+<li>Daniel Schmelzer for his hard work creating and
 updating the website. </li>
 
-<li>Thanks to Steve Grimm for his work on the new and old methods
-of 3:2 pulldown and to his contribution of the aspect ratio
-autodetect code.</li>
+<li>Yvon Quere for creating and updating the FAQ.</li>
 
-<li>Thanks to Tom Barry for his implementation of triple
-buffering and his synchronization fix, as well as his
-contribution of low-level user manipulation of the bt
-chipset.</li>
+<li>Yvon and Ali for finding, using and promoting bTV and encouraging us to
+see HTPC's as video processors.</li>
 
-<li>Thanks to Yvon Quere and Ali for finding, using and promoting
-bTV and Yvon for creating and updating the FAQ.</li>
+<li>Jason Castle for updating the todo and bugs pages.</li>
 
-<li>Thanks to Jason Castle for updating the todo and bugs
-pages.</li>
-
-<li>Thanks to Borg, creator of bTV, for writing the first ever
+<li>Borg, creator of bTV, for writing the first ever
 intelligent computer deinterlacing program--the inspiration for
 this project.</li>
 
-<li>Thanks to all at the AVSForums for your encouragement and
+<li>All at the AVSForums for your encouragement and
 help. The HTPC forum is easily the best group on the
 internet.</li>
 
-<li>Thanks to the authors of VirtualDub for the the idea behind
+<li>The authors of VirtualDub for the the idea behind
 the PAL detection algorithm.</li>
 
-<li>Thanks to Gunnar Thalin for his area based deinterlacing
+<li>Gunnar Thalin for his area based deinterlacing
 plug-in which was the basis for the Video Bob deinterlacing
 method.</li>
 
-<li>Thanks to Steaphan Greene, &Oslash;yvind Aabling, Octavian
+<li>Steaphan Greene, &Oslash;yvind Aabling, Octavian
 Purdila, Vladimir Dergachev and Christian Lupien&#151;the GATOS
 developers&#151;for the original screen capture code.</li>
 
-<li>Thanks to Torbj&ouml;rn Jansson for his bug fixes.</li>
+<li>Erik Spr&aring;ng for the new DScaler logo.</li>
 
-<li>Thanks to Erik Spr&aring;ng for the new DScaler logo.</li>
+<li>Phat Phreddy for the new DScaler domains.</li>
 
-<li>Thanks to Phat Phreddy for the new DScaler domains.</li>
+<li>Tom Fojta for the Czech teletext code page.</li>
 
-<li>Thanks to Tom Fojta for the Czech teletext code page.</li>
+<li>John Isar for the Greek teletext code page.</li>
 
-<li>Thanks to John Isar for the Greek teletext code page.</li>
+<li>Eduardo José Tagle for the PAL-NC patch.</li>
 
-<li>Thanks to Eduardo José Tagle for the PAL-NC patch.</li>
-
-<li>Thanks to Mike Temperton for the Russian teletext code page.</li>
-
-<li>Finally thanks to everybody on the deinterlace project
-mailing list.</li>
-</ol>
+<li>Everybody on the deinterlace project mailing list.</li>
+</ul>
 
 <!-- #EndEditable -->
 </td>
